--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
-
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GPS Data Sender</title>
-    <script type="module">
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-app.js";
-        import { getDatabase, ref, set, push } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-database.js";
-        import { getAuth, signInAnonymously } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-auth.js";
+    <title>GPS Data Tracker</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/17.0.2/umd/react.development.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/17.0.2/umd/react-dom.development.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth.js"></script>
+</head>
+<body class="bg-gradient-to-br from-blue-100 to-blue-300 min-h-screen flex items-center justify-center">
+    <div id="root"></div>
 
+    <script type="text/babel">
+        // Firebase Configuration
         const firebaseConfig = {
             apiKey: "YOUR_API_KEY",
             authDomain: "heatwave-2025.firebaseapp.com",
@@ -18,73 +25,108 @@
         };
 
         // Initialize Firebase
-        const app = initializeApp(firebaseConfig);
-        const database = getDatabase(app);
-        const auth = getAuth();
+        firebase.initializeApp(firebaseConfig);
+        const database = firebase.database();
+        const auth = firebase.auth();
 
-        // Sign in Anonymously
-        signInAnonymously(auth)
-            .then(() => console.log("Signed in anonymously"))
-            .catch(error => console.error("Authentication Error: ", error));
+        // React Component
+        function GPSTracker() {
+            const [latitude, setLatitude] = React.useState('Waiting...');
+            const [longitude, setLongitude] = React.useState('Waiting...');
+            const [status, setStatus] = React.useState('Tracking Location');
+            const [error, setError] = React.useState(null);
 
-        function sendGPSData(position) {
-            const latitude = position.coords.latitude;
-            const longitude = position.coords.longitude;
+            React.useEffect(() => {
+                // Sign in Anonymously
+                auth.signInAnonymously()
+                    .then(() => console.log("Signed in anonymously"))
+                    .catch(error => {
+                        console.error("Authentication Error: ", error);
+                        setError(error.message);
+                    });
 
-            document.getElementById("lat").innerText = latitude;
-            document.getElementById("long").innerText = longitude;
+                // Start Geolocation Tracking
+                if (navigator.geolocation) {
+                    const watchId = navigator.geolocation.watchPosition(
+                        (position) => {
+                            const lat = position.coords.latitude;
+                            const long = position.coords.longitude;
 
-            // Send GPS data to Firebase
-            push(ref(database, "/gpsData"), {
-                latitude,
-                longitude,
-                timestamp: new Date().toISOString()
-            }).then(() => {
-                console.log("GPS Data Sent to Firebase");
-            }).catch(error => {
-                console.error("Error sending GPS data: ", error);
-            });
+                            // Update state
+                            setLatitude(lat.toFixed(6));
+                            setLongitude(long.toFixed(6));
+                            setStatus('Location Found');
+
+                            // Send to Firebase
+                            const gpsRef = database.ref('/gpsData').push();
+                            gpsRef.set({
+                                latitude: lat,
+                                longitude: long,
+                                timestamp: new Date().toISOString()
+                            }).catch(error => {
+                                console.error("Error sending GPS data: ", error);
+                                setError(error.message);
+                            });
+                        },
+                        (error) => {
+                            let errorMsg = "";
+                            switch (error.code) {
+                                case error.PERMISSION_DENIED:
+                                    errorMsg = "Location access denied";
+                                    break;
+                                case error.POSITION_UNAVAILABLE:
+                                    errorMsg = "Location unavailable";
+                                    break;
+                                case error.TIMEOUT:
+                                    errorMsg = "Location request timed out";
+                                    break;
+                                default:
+                                    errorMsg = "Unknown error";
+                            }
+                            setError(errorMsg);
+                            setStatus('Error');
+                        },
+                        {
+                            enableHighAccuracy: true,
+                            maximumAge: 0,
+                            timeout: 5000
+                        }
+                    );
+
+                    // Cleanup function
+                    return () => navigator.geolocation.clearWatch(watchId);
+                } else {
+                    setError("Geolocation not supported");
+                    setStatus('Error');
+                }
+            }, []);
+
+            return (
+                <div className="bg-white shadow-2xl rounded-2xl p-8 max-w-md w-full transform transition-all hover:scale-105">
+                    <h1 className="text-3xl font-bold text-center mb-6 text-blue-600">GPS Tracker</h1>
+                    
+                    <div className="grid grid-cols-2 gap-4 mb-6">
+                        <div className={`p-4 rounded-lg shadow-md ${latitude === 'Waiting...' ? 'bg-gray-100' : 'bg-green-100'}`}>
+                            <h2 className="text-sm font-semibold text-gray-600 mb-2">Latitude</h2>
+                            <p className="text-2xl font-bold text-blue-800">{latitude}</p>
+                        </div>
+                        
+                        <div className={`p-4 rounded-lg shadow-md ${longitude === 'Waiting...' ? 'bg-gray-100' : 'bg-green-100'}`}>
+                            <h2 className="text-sm font-semibold text-gray-600 mb-2">Longitude</h2>
+                            <p className="text-2xl font-bold text-blue-800">{longitude}</p>
+                        </div>
+                    </div>
+
+                    <div className={`p-4 rounded-lg text-center ${status === 'Error' ? 'bg-red-100 text-red-800' : 'bg-blue-100 text-blue-800'}`}>
+                        <p className="font-semibold">{status}</p>
+                        {error && <p className="text-sm text-red-600 mt-2">{error}</p>}
+                    </div>
+                </div>
+            );
         }
 
-        function showError(error) {
-            let errorMsg = "";
-            switch (error.code) {
-                case error.PERMISSION_DENIED:
-                    errorMsg = "User denied the request for Geolocation.";
-                    break;
-                case error.POSITION_UNAVAILABLE:
-                    errorMsg = "Location information is unavailable.";
-                    break;
-                case error.TIMEOUT:
-                    errorMsg = "The request to get user location timed out.";
-                    break;
-                case error.UNKNOWN_ERROR:
-                    errorMsg = "An unknown error occurred.";
-                    break;
-            }
-            console.error("GPS Error: ", errorMsg);
-            document.getElementById("lat").innerText = "Error";
-            document.getElementById("long").innerText = errorMsg;
-        }
-
-        function startTracking() {
-            if (navigator.geolocation) {
-                navigator.geolocation.watchPosition(sendGPSData, showError, {
-                    enableHighAccuracy: true,
-                    maximumAge: 0
-                });
-            } else {
-                console.error("Geolocation is not supported by this browser.");
-            }
-        }
-
-        // Start tracking GPS on page load
-        window.onload = startTracking;
+        // Render the React component
+        ReactDOM.render(<GPSTracker />, document.getElementById('root'));
     </script>
-</head>
-<body>
-    <h2>GPS Data Sender</h2>
-    <p>Latitude: <span id="lat">Waiting...</span></p>
-    <p>Longitude: <span id="long">Waiting...</span></p>
 </body>
 </html>
